frontend/tests/errors/ER-012/i8_wrap_positive/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Integer overflow wraps using two'"'"'s complement arithmetic | Integer overflow wraps using two'"'"'s complement (i8 positive overflow)


&^main() -> #i32 {
    x:#i8 = 127;
    y:#i8 = x + 1;
    y;
}
